# shorty

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENCE  README.md  alembic.ini  docker-compose.yml  migrate.sh  pyproject.toml  run.py
.devcontainer/: devcontainer.json
backend/: config.py  database.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_11_1039-53e2db901362_created_urlmodels_table.py
backend/messaging/: __init__.py  broker.py  scheduler.py  tasks.py
backend/models/: base_model.py  url_model.py
backend/repositories/: url_repository.py
backend/routes/: __init__.py  frontend_router.py  url_router.py
backend/schemas/: url_schema.py
backend/services/: service_dependency.py  url_service.py
docker/: Dockerfile.app  Dockerfile.helper
frontend/scripts/: parse_json_data.js
frontend/static/scripts/: main.js
frontend/static/styles/: base.css
frontend/templates/: 404.html  base.html  index.html
