[project]
name = "shortener"
version = "0.1.0"
description = "URL shortener"
authors = [{ name = "alxww55", email = "alxww55@icloud.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "taskiq (>=0.12.1,<0.13.0)",
    "taskiq-aio-pika (>=0.5.0,<0.6.0)",
    "taskiq-fastapi (>=0.4.0,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 79
lint.select = ["E", "F", "UP", "B", "SIM", "I"]
fix = true
exclude = ["__pycache__", ".ruff-cache"]
